refactoring GetAllUsers endpoint & swagger init
